update: TourNote -> valid tour, title